Solved issue with labels overlapping input fields on contact form after submission

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,16 @@ nav ul li a {
 	background-color: #ff7474b0;
 }
 
+/*-------------------- Flash messages */
+
+.flash-container {
+    padding: 0.5rem 0 0;
+	border: 0.1rem solid #adaaa1de;
+	border-radius: 1rem;
+    box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    margin: 2rem auto;
+}
+
 
 /*-------------------- Recently added books */
 
@@ -136,7 +146,7 @@ nav ul li a {
 	padding: 0.5rem;
 	border: 0.1rem solid #adaaa1de;
 	border-radius: 1rem;
-	box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
+	box-shadow: 0.5rem 0.5rem 0.8rem rgba(0, 0, 0, 0.1);
 	display: flex;
 	vertical-align: center;
 	justify-content: center;
